--- a/MFCApplication1/MFCApplication1.vcxproj
+++ b/MFCApplication1/MFCApplication1.vcxproj
@@ -219,6 +219,8 @@
     <Image Include="flor.png" />
     <Image Include="hero.png" />
     <Image Include="maliao.png" />
+    <Image Include="Map.png" />
+    <Image Include="Map_mengban.png" />
     <Image Include="res\backGround.bmp" />
     <Image Include="res\bitmap6.bmp" />
     <Image Include="res\bitmap7.bmp" />
