--- a/MFCApplication1/MFCApplication1.vcxproj.filters
+++ b/MFCApplication1/MFCApplication1.vcxproj.filters
@@ -147,6 +147,12 @@
     <Image Include="snow1_00.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="Map.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="Map_mengban.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\MFCApplication1.rc2">
